--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
+black==22.1.0
+click==8.0.3
 cycler==0.10.0
+flake8==4.0.1
 kiwisolver==1.2.0
 matplotlib==3.2.1
-numpy==1.18.2
+mccabe==0.6.1
+mypy-extensions==0.4.3
+numpy==1.22.2
+pathspec==0.9.0
+platformdirs==2.4.1
+pycodestyle==2.8.0
+pyflakes==2.4.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 six==1.14.0
+tk==0.1.0
+tomli==2.0.1
+typing_extensions==4.0.1
